--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ serde_json = "1.0.115"
 serde_yaml = "0.9.34"
 supabase_rs = "0.2.2"
 tokio = "1.36.0"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
